Fix: Close script tag properly to fix toggleDocs function error
- Add missing closing </script> tag after toggleDocs function
- Fixes 'Uncaught ReferenceError: toggleDocs is not defined' error
- Resolves syntax error causing JavaScript to fail

--- a/public/index.html
+++ b/public/index.html
@@ -564,6 +564,7 @@
                 toggle.textContent = 'Show Docs';
             }
         }
+    </script>
 
     <script>
         let slideCount = 0;
